fix: Floating action button z-index

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,7 @@ html, body {
   position: fixed;
   bottom: 2rem;
   right: 2rem;
+  z-index: 1000;
 }
 
 .visible-hover {
